# dont-fuck-with-paste

./: .bumpversion.cfg  README.md  pyproject.toml
dont_fuck_with_paste/: cli.py
